# EPC

./: package-lock.json  package.json  tsconfig.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: csv_parsing.rs  data_fetcher.rs  data_structures.rs  export.rs  filter_get_data.rs  get_data.rs  get_json_data.rs  json_handling.rs  main.rs  process_data.rs  table_elements.rs  table_generation.rs  utilities.rs  xlsx_data_exporter.rs
src/components/: DataTable.tsx  MeasurementForm.tsx
src/styles/: styles.css
src/utils/: aggregateData.ts  aggregateFormData.ts  aggregateTableData.ts  fetchAllData.js  fetchFilteredData.js  fetchFilteredData.ts  fetchdata.js  processCsv.ts  types.ts
