# Cargo.toml
[package]
name = "electrexparamcompanion"
version = "0.0.0"
description = "A Tauri App"
authors = ["André Teles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-read-dir", "path-all", "fs-read-file", "fs-create-dir", "dialog-open", "fs-write-file", "dialog-save", "window-set-title", "window-create" ] }
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.115"
csv = "1.3.0"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = [ "v4", "fast-rng" ] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
