# Cargo.toml
[package]
name = "electrex_param_companion"
version = "0.9.0"
description = "Aplicação para estatísticas de parametragem de máquinas de soldadura"
authors = ["André Teles"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-asset", "fs-read-dir", "path-all", "fs-read-file", "fs-create-dir", "dialog-open", "fs-write-file", "dialog-save", "window-set-title", "window-create" ] }
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.115"
csv = "1.3.0"
chrono = "0.4.37"
uuid = { version = "1.8.0", features = [ "v4", "fast-rng" ] }
rust_xlsxwriter = "0.64.2"
image = "0.25.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
